--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/style.css" type=text/css rel=stylesheet>
+    <link href="./resources/css/style.css" type=text/css rel=stylesheet>
     <title>Excursion</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p>Download Excursion (Coming soon!)</p>
+    <div class="download">
+      <p>Download Excursion (Coming soon!)</p>
+    </div>
+    <p><video src="./resources/videos/excursion.mp4"></p>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.<h3>
+    <p><img src="./resources/images/camp.jpg"></p>
+    <p><img src="./resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <div class="download">
+      <p>Download Excursion (Coming soon!)</p>
+    </div>
+    
+    <div class="footer">
+      <p>&copy; Excursion</p>
+    </div>
   </body>
 </html>
