--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="download">
       <p>Download Excursion (Coming soon!)</p>
     </div>
-    <p><video src="./resources/videos/excursion.mp4"></p>
+    <video autoplay muted loop>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    </video>
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.<h3>
     <p><img src="./resources/images/camp.jpg"></p>
@@ -19,7 +21,7 @@
     <div class="download">
       <p>Download Excursion (Coming soon!)</p>
     </div>
-    
+
     <div class="footer">
       <p>&copy; Excursion</p>
     </div>
